<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/btnEscribirXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escribir_xml" />
    
    <Button
        android:id="@+id/btnEscribirXmlPull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escribir_xml_con_xmlpull" />

    <Button
        android:id="@+id/btnLeerDesdeMemoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leer_xml_desde_memoria" />
    
    <Button
        android:id="@+id/btnLeerDesdeXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings" />
    
    <Button
        android:id="@+id/btnLeerDesdeRaw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leer_xml_desde_recurso_raw" />
    
	<Button
        android:id="@+id/btnLeerDesdeAssets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leer_xml_desde_assets" />

</LinearLayout>